--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "backfill:orders": "ts-node src/scripts/backfillOrders.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "node-cron": "^4.2.1",
-    "stripe": "^19.3.1"
+    "stripe": "^19.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -35,6 +38,7 @@
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.10"
   }
 }
